--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -12,16 +12,17 @@ jobs:
   Test-checkout:
     runs-on: windows-latest
     steps:
-      - name: Check out repository code 
-        uses: actions/checkout@v4
-	      with:
-	        path: main
-
-      - name: Check out repository code 2
-        uses: actions/checkout@v4
-	      with:
-	        path: main2
-  
-      - name: Build nuget package 
-        shell:  pwsh
-        run: ls ${{ github.workspace }}
+    - name: Check out repository code 
+      uses: actions/checkout@v4
+      with:
+        path: main
+   
+    - name: Check out repository code 2
+      uses: actions/checkout@v4
+      with:
+        repository: lucasAntunesTam/CICD_Pipeline
+        path: main2
+      
+    - name: Build nuget package 
+      shell:  pwsh
+      run: ls ${{ github.workspace }}
