--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -28,3 +28,8 @@ jobs:
       run: |
         ls ${{ github.workspace }}\main
         ls ${{ github.workspace }}\main2
+
+    - name: Call reusable workflow 
+      uses:  https://github.com/lucasAntunesTam/CICD_Pipeline/blob/main/.github/workflows/ReusableWorkflow.yml@main
+      with:
+        test: ${{ github.workspace }}
