--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -10,26 +10,6 @@ on:
 
 jobs:
   Test-checkout:
-    runs-on: windows-latest
-    steps:
-    - name: Check out repository code 
-      uses: actions/checkout@v4
-      with:
-        path: main
-   
-    - name: Check out repository code 2
-      uses: actions/checkout@v4
-      with:
-        repository: lucasAntunesTam/CICD_Pipeline
-        path: main2
-      
-    - name: Build nuget package 
-      shell:  pwsh
-      run: |
-        ls ${{ github.workspace }}\main
-        ls ${{ github.workspace }}\main2
-
-    - name: Call reusable workflow 
-      uses:  lucasAntunesTam/CICD_Pipeline/.github/workflows/ReusableWorkflow.yml@main
-      with:
-        test: ${{ github.workspace }}
+    uses:  lucasAntunesTam/CICD_Pipeline/.github/workflows/ReusableWorkflow.yml@main
+    with:
+      test: lucasAntunesTam/gittest
